# nitro

./: CMakeLists.txt  README.md  Rectangle.h  main.cpp  tests.cpp
.github/workflows/: c-cpp.yml
NitroCppTest-Erdem/: README.md  Rectangle.h  main.cpp
NitroCppTest-Erdem/tests/integration/: expected.txt
NitroCppTest-Erdem/tests/unittests/: unittests.cpp
tests/integration/: expected.txt  test.py
tests/unittests/: unittests.cpp
